--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.68.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-istanbul": "^0.11.0",
@@ -28,6 +29,7 @@
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0",
@@ -35,8 +37,9 @@
   },
   "scripts": {
     "server": "webpack-dev-server --hot --inline --content-base build",
+    "deploy": "AWS_PROFILE=default node ./scripts/deploy.js",
     "dev": "webpack && npm run server",
-    "build": "react-scripts build",
+    "build": "ENV=production WEBPACK_ENV=build ./node_modules/.bin/webpack -p --define process.env.NODE_ENV='\"production\"' --progress",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
