Top bar component

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "block-spacing": ["error", "always"],
     "brace-style": ["error", "1tbs", { "allowSingleLine": true }],
     "camelcase": ["error", { "properties": "never" }],
+    "class-methods-use-this": "off",
     "comma-dangle": [0, "never"],
     "comma-spacing": ["error", { "before": false, "after": true }],
     "comma-style": ["error", "last"],
